select/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> insert_statement
Rule 2     statement -> select_statement
Rule 3     statement -> delete_statement
Rule 4     insert_statement -> INSERT into_kw TABLE_NAME VALUES OPENPAR value_list CLOSEPAR SEMICOLON
Rule 5     insert_statement -> INSERT into_kw TABLE_NAME OPENPAR column_name CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
Rule 6     insert_statement -> INSERT into_kw TABLE_NAME SET assignment_list SEMICOLON
Rule 7     select_statement -> SELECT columns FROM TABLE_NAME SEMICOLON
Rule 8     select_statement -> SELECT columns FROM TABLE_NAME WHERE condition SEMICOLON
Rule 9     delete_statement -> DELETE FROM TABLE_NAME SEMICOLON
Rule 10    delete_statement -> DELETE FROM TABLE_NAME WHERE condition SEMICOLON
Rule 11    into_kw -> INTO
Rule 12    into_kw -> empty
Rule 13    columns -> ASTERISK
Rule 14    columns -> column_name
Rule 15    column_name -> COLUMN_NAME
Rule 16    column_name -> column_name COMMA COLUMN_NAME
Rule 17    assignment_list -> COLUMN_NAME EQUAL literals
Rule 18    assignment_list -> assignment_list COMMA COLUMN_NAME EQUAL literals
Rule 19    value_list -> literals
Rule 20    value_list -> value_list COMMA literals
Rule 21    literals -> STRING_LIT
Rule 22    literals -> INT_LIT
Rule 23    literals -> DOUBLE_LIT
Rule 24    condition -> string_cond
Rule 25    condition -> num_cond
Rule 26    condition -> NOT OPENPAR string_cond CLOSEPAR
Rule 27    condition -> NOT OPENPAR num_cond CLOSEPAR
Rule 28    string_cond -> string_exp LIKE string_exp
Rule 29    string_cond -> string_exp NOT LIKE string_exp
Rule 30    string_cond -> STRCMP OPENPAR string_exp COMMA string_exp CLOSEPAR
Rule 31    string_exp -> STRING_LIT
Rule 32    string_exp -> COLUMN_NAME
Rule 33    num_cond -> num_exp comparison_op num_exp
Rule 34    num_cond -> num_exp BETWEEN num_exp AND num_exp
Rule 35    num_cond -> num_exp NOT NULL
Rule 36    num_cond -> num_exp IS NULL
Rule 37    num_exp -> num_exp ADD num_factor
Rule 38    num_exp -> num_factor SUBTRACT num_exp
Rule 39    num_exp -> num_factor
Rule 40    num_factor -> num_factor ASTERISK num_term
Rule 41    num_factor -> num_factor DIVIDE num_term
Rule 42    num_factor -> num_factor DIVIDE_INT num_term
Rule 43    num_factor -> num_factor MODULO num_term
Rule 44    num_factor -> num_term
Rule 45    num_term -> OPENPAR num_exp CLOSEPAR
Rule 46    num_term -> num_val
Rule 47    num_val -> INT_LIT
Rule 48    num_val -> DOUBLE_LIT
Rule 49    num_val -> COLUMN_NAME
Rule 50    comparison_op -> GE
Rule 51    comparison_op -> GT
Rule 52    comparison_op -> LE
Rule 53    comparison_op -> LT
Rule 54    comparison_op -> NE
Rule 55    comparison_op -> EQUAL
Rule 56    comparison_op -> EQUAL_NULL
Rule 57    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 37
AND                  : 34
ASTERISK             : 13 40
BETWEEN              : 34
CLOSEPAR             : 4 5 5 26 27 30 45
COLUMN_NAME          : 15 16 17 18 32 49
COMMA                : 16 18 20 30
DELETE               : 9 10
DIVIDE               : 41
DIVIDE_INT           : 42
DOUBLE_LIT           : 23 48
EQUAL                : 17 18 55
EQUAL_NULL           : 56
FROM                 : 7 8 9 10
GE                   : 50
GT                   : 51
INSERT               : 4 5 6
INTO                 : 11
INT_LIT              : 22 47
IS                   : 36
LE                   : 52
LIKE                 : 28 29
LT                   : 53
MODULO               : 43
NE                   : 54
NOT                  : 26 27 29 35
NULL                 : 35 36
OPENPAR              : 4 5 5 26 27 30 45
SELECT               : 7 8
SEMICOLON            : 4 5 6 7 8 9 10
SET                  : 6
STRCMP               : 30
STRING_LIT           : 21 31
SUBTRACT             : 38
TABLE_NAME           : 4 5 6 7 8 9 10
VALUES               : 4 5
WHERE                : 8 10
error                : 

Nonterminals, with rules where they appear

assignment_list      : 6 18
column_name          : 5 14 16
columns              : 7 8
comparison_op        : 33
condition            : 8 10
delete_statement     : 3
empty                : 12
insert_statement     : 1
into_kw              : 4 5 6
literals             : 17 18 19 20
num_cond             : 25 27
num_exp              : 33 33 34 34 34 35 36 37 38 45
num_factor           : 37 38 39 40 41 42 43
num_term             : 40 41 42 43 44
num_val              : 46
select_statement     : 2
statement            : 0
string_cond          : 24 26
string_exp           : 28 28 29 29 30 30
value_list           : 4 5 20

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . insert_statement
    (2) statement -> . select_statement
    (3) statement -> . delete_statement
    (4) insert_statement -> . INSERT into_kw TABLE_NAME VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (5) insert_statement -> . INSERT into_kw TABLE_NAME OPENPAR column_name CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (6) insert_statement -> . INSERT into_kw TABLE_NAME SET assignment_list SEMICOLON
    (7) select_statement -> . SELECT columns FROM TABLE_NAME SEMICOLON
    (8) select_statement -> . SELECT columns FROM TABLE_NAME WHERE condition SEMICOLON
    (9) delete_statement -> . DELETE FROM TABLE_NAME SEMICOLON
    (10) delete_statement -> . DELETE FROM TABLE_NAME WHERE condition SEMICOLON

    INSERT          shift and go to state 1
    SELECT          shift and go to state 7
    DELETE          shift and go to state 5

    select_statement               shift and go to state 2
    delete_statement               shift and go to state 3
    statement                      shift and go to state 4
    insert_statement               shift and go to state 6

state 1

    (4) insert_statement -> INSERT . into_kw TABLE_NAME VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (5) insert_statement -> INSERT . into_kw TABLE_NAME OPENPAR column_name CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (6) insert_statement -> INSERT . into_kw TABLE_NAME SET assignment_list SEMICOLON
    (11) into_kw -> . INTO
    (12) into_kw -> . empty
    (57) empty -> .

    INTO            shift and go to state 8
    TABLE_NAME      reduce using rule 57 (empty -> .)

    into_kw                        shift and go to state 9
    empty                          shift and go to state 10

state 2

    (2) statement -> select_statement .

    $end            reduce using rule 2 (statement -> select_statement .)


state 3

    (3) statement -> delete_statement .

    $end            reduce using rule 3 (statement -> delete_statement .)


state 4

    (0) S' -> statement .



state 5

    (9) delete_statement -> DELETE . FROM TABLE_NAME SEMICOLON
    (10) delete_statement -> DELETE . FROM TABLE_NAME WHERE condition SEMICOLON

    FROM            shift and go to state 11


state 6

    (1) statement -> insert_statement .

    $end            reduce using rule 1 (statement -> insert_statement .)


state 7

    (7) select_statement -> SELECT . columns FROM TABLE_NAME SEMICOLON
    (8) select_statement -> SELECT . columns FROM TABLE_NAME WHERE condition SEMICOLON
    (13) columns -> . ASTERISK
    (14) columns -> . column_name
    (15) column_name -> . COLUMN_NAME
    (16) column_name -> . column_name COMMA COLUMN_NAME

    ASTERISK        shift and go to state 12
    COLUMN_NAME     shift and go to state 13

    columns                        shift and go to state 14
    column_name                    shift and go to state 15

state 8

    (11) into_kw -> INTO .

    TABLE_NAME      reduce using rule 11 (into_kw -> INTO .)


state 9

    (4) insert_statement -> INSERT into_kw . TABLE_NAME VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (5) insert_statement -> INSERT into_kw . TABLE_NAME OPENPAR column_name CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (6) insert_statement -> INSERT into_kw . TABLE_NAME SET assignment_list SEMICOLON

    TABLE_NAME      shift and go to state 16


state 10

    (12) into_kw -> empty .

    TABLE_NAME      reduce using rule 12 (into_kw -> empty .)


state 11

    (9) delete_statement -> DELETE FROM . TABLE_NAME SEMICOLON
    (10) delete_statement -> DELETE FROM . TABLE_NAME WHERE condition SEMICOLON

    TABLE_NAME      shift and go to state 17


state 12

    (13) columns -> ASTERISK .

    FROM            reduce using rule 13 (columns -> ASTERISK .)


state 13

    (15) column_name -> COLUMN_NAME .

    COMMA           reduce using rule 15 (column_name -> COLUMN_NAME .)
    FROM            reduce using rule 15 (column_name -> COLUMN_NAME .)
    CLOSEPAR        reduce using rule 15 (column_name -> COLUMN_NAME .)


state 14

    (7) select_statement -> SELECT columns . FROM TABLE_NAME SEMICOLON
    (8) select_statement -> SELECT columns . FROM TABLE_NAME WHERE condition SEMICOLON

    FROM            shift and go to state 18


state 15

    (14) columns -> column_name .
    (16) column_name -> column_name . COMMA COLUMN_NAME

    FROM            reduce using rule 14 (columns -> column_name .)
    COMMA           shift and go to state 19


state 16

    (4) insert_statement -> INSERT into_kw TABLE_NAME . VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (5) insert_statement -> INSERT into_kw TABLE_NAME . OPENPAR column_name CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (6) insert_statement -> INSERT into_kw TABLE_NAME . SET assignment_list SEMICOLON

    VALUES          shift and go to state 22
    OPENPAR         shift and go to state 21
    SET             shift and go to state 20


state 17

    (9) delete_statement -> DELETE FROM TABLE_NAME . SEMICOLON
    (10) delete_statement -> DELETE FROM TABLE_NAME . WHERE condition SEMICOLON

    SEMICOLON       shift and go to state 23
    WHERE           shift and go to state 24


state 18

    (7) select_statement -> SELECT columns FROM . TABLE_NAME SEMICOLON
    (8) select_statement -> SELECT columns FROM . TABLE_NAME WHERE condition SEMICOLON

    TABLE_NAME      shift and go to state 25


state 19

    (16) column_name -> column_name COMMA . COLUMN_NAME

    COLUMN_NAME     shift and go to state 26


state 20

    (6) insert_statement -> INSERT into_kw TABLE_NAME SET . assignment_list SEMICOLON
    (17) assignment_list -> . COLUMN_NAME EQUAL literals
    (18) assignment_list -> . assignment_list COMMA COLUMN_NAME EQUAL literals

    COLUMN_NAME     shift and go to state 28

    assignment_list                shift and go to state 27

state 21

    (5) insert_statement -> INSERT into_kw TABLE_NAME OPENPAR . column_name CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (15) column_name -> . COLUMN_NAME
    (16) column_name -> . column_name COMMA COLUMN_NAME

    COLUMN_NAME     shift and go to state 13

    column_name                    shift and go to state 29

state 22

    (4) insert_statement -> INSERT into_kw TABLE_NAME VALUES . OPENPAR value_list CLOSEPAR SEMICOLON

    OPENPAR         shift and go to state 30


state 23

    (9) delete_statement -> DELETE FROM TABLE_NAME SEMICOLON .

    $end            reduce using rule 9 (delete_statement -> DELETE FROM TABLE_NAME SEMICOLON .)


state 24

    (10) delete_statement -> DELETE FROM TABLE_NAME WHERE . condition SEMICOLON
    (24) condition -> . string_cond
    (25) condition -> . num_cond
    (26) condition -> . NOT OPENPAR string_cond CLOSEPAR
    (27) condition -> . NOT OPENPAR num_cond CLOSEPAR
    (28) string_cond -> . string_exp LIKE string_exp
    (29) string_cond -> . string_exp NOT LIKE string_exp
    (30) string_cond -> . STRCMP OPENPAR string_exp COMMA string_exp CLOSEPAR
    (33) num_cond -> . num_exp comparison_op num_exp
    (34) num_cond -> . num_exp BETWEEN num_exp AND num_exp
    (35) num_cond -> . num_exp NOT NULL
    (36) num_cond -> . num_exp IS NULL
    (31) string_exp -> . STRING_LIT
    (32) string_exp -> . COLUMN_NAME
    (37) num_exp -> . num_exp ADD num_factor
    (38) num_exp -> . num_factor SUBTRACT num_exp
    (39) num_exp -> . num_factor
    (40) num_factor -> . num_factor ASTERISK num_term
    (41) num_factor -> . num_factor DIVIDE num_term
    (42) num_factor -> . num_factor DIVIDE_INT num_term
    (43) num_factor -> . num_factor MODULO num_term
    (44) num_factor -> . num_term
    (45) num_term -> . OPENPAR num_exp CLOSEPAR
    (46) num_term -> . num_val
    (47) num_val -> . INT_LIT
    (48) num_val -> . DOUBLE_LIT
    (49) num_val -> . COLUMN_NAME

    NOT             shift and go to state 45
    STRCMP          shift and go to state 38
    STRING_LIT      shift and go to state 44
    COLUMN_NAME     shift and go to state 39
    OPENPAR         shift and go to state 31
    INT_LIT         shift and go to state 43
    DOUBLE_LIT      shift and go to state 34

    num_term                       shift and go to state 35
    num_cond                       shift and go to state 41
    num_factor                     shift and go to state 42
    string_cond                    shift and go to state 36
    num_exp                        shift and go to state 37
    num_val                        shift and go to state 33
    string_exp                     shift and go to state 32
    condition                      shift and go to state 40

state 25

    (7) select_statement -> SELECT columns FROM TABLE_NAME . SEMICOLON
    (8) select_statement -> SELECT columns FROM TABLE_NAME . WHERE condition SEMICOLON

    SEMICOLON       shift and go to state 46
    WHERE           shift and go to state 47


state 26

    (16) column_name -> column_name COMMA COLUMN_NAME .

    COMMA           reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    FROM            reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    CLOSEPAR        reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)


state 27

    (6) insert_statement -> INSERT into_kw TABLE_NAME SET assignment_list . SEMICOLON
    (18) assignment_list -> assignment_list . COMMA COLUMN_NAME EQUAL literals

    SEMICOLON       shift and go to state 48
    COMMA           shift and go to state 49


state 28

    (17) assignment_list -> COLUMN_NAME . EQUAL literals

    EQUAL           shift and go to state 50


state 29

    (5) insert_statement -> INSERT into_kw TABLE_NAME OPENPAR column_name . CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (16) column_name -> column_name . COMMA COLUMN_NAME

    CLOSEPAR        shift and go to state 51
    COMMA           shift and go to state 19


state 30

    (4) insert_statement -> INSERT into_kw TABLE_NAME VALUES OPENPAR . value_list CLOSEPAR SEMICOLON
    (19) value_list -> . literals
    (20) value_list -> . value_list COMMA literals
    (21) literals -> . STRING_LIT
    (22) literals -> . INT_LIT
    (23) literals -> . DOUBLE_LIT

    STRING_LIT      shift and go to state 56
    INT_LIT         shift and go to state 55
    DOUBLE_LIT      shift and go to state 54

    value_list                     shift and go to state 53
    literals                       shift and go to state 52

state 31

    (45) num_term -> OPENPAR . num_exp CLOSEPAR
    (37) num_exp -> . num_exp ADD num_factor
    (38) num_exp -> . num_factor SUBTRACT num_exp
    (39) num_exp -> . num_factor
    (40) num_factor -> . num_factor ASTERISK num_term
    (41) num_factor -> . num_factor DIVIDE num_term
    (42) num_factor -> . num_factor DIVIDE_INT num_term
    (43) num_factor -> . num_factor MODULO num_term
    (44) num_factor -> . num_term
    (45) num_term -> . OPENPAR num_exp CLOSEPAR
    (46) num_term -> . num_val
    (47) num_val -> . INT_LIT
    (48) num_val -> . DOUBLE_LIT
    (49) num_val -> . COLUMN_NAME

    OPENPAR         shift and go to state 31
    INT_LIT         shift and go to state 43
    DOUBLE_LIT      shift and go to state 34
    COLUMN_NAME     shift and go to state 58

    num_factor                     shift and go to state 42
    num_val                        shift and go to state 33
    num_term                       shift and go to state 35
    num_exp                        shift and go to state 57

state 32

    (28) string_cond -> string_exp . LIKE string_exp
    (29) string_cond -> string_exp . NOT LIKE string_exp

    LIKE            shift and go to state 60
    NOT             shift and go to state 59


state 33

    (46) num_term -> num_val .

    SUBTRACT        reduce using rule 46 (num_term -> num_val .)
    ASTERISK        reduce using rule 46 (num_term -> num_val .)
    DIVIDE          reduce using rule 46 (num_term -> num_val .)
    DIVIDE_INT      reduce using rule 46 (num_term -> num_val .)
    MODULO          reduce using rule 46 (num_term -> num_val .)
    ADD             reduce using rule 46 (num_term -> num_val .)
    SEMICOLON       reduce using rule 46 (num_term -> num_val .)
    CLOSEPAR        reduce using rule 46 (num_term -> num_val .)
    BETWEEN         reduce using rule 46 (num_term -> num_val .)
    NOT             reduce using rule 46 (num_term -> num_val .)
    IS              reduce using rule 46 (num_term -> num_val .)
    GE              reduce using rule 46 (num_term -> num_val .)
    GT              reduce using rule 46 (num_term -> num_val .)
    LE              reduce using rule 46 (num_term -> num_val .)
    LT              reduce using rule 46 (num_term -> num_val .)
    NE              reduce using rule 46 (num_term -> num_val .)
    EQUAL           reduce using rule 46 (num_term -> num_val .)
    EQUAL_NULL      reduce using rule 46 (num_term -> num_val .)
    AND             reduce using rule 46 (num_term -> num_val .)


state 34

    (48) num_val -> DOUBLE_LIT .

    SUBTRACT        reduce using rule 48 (num_val -> DOUBLE_LIT .)
    ASTERISK        reduce using rule 48 (num_val -> DOUBLE_LIT .)
    DIVIDE          reduce using rule 48 (num_val -> DOUBLE_LIT .)
    DIVIDE_INT      reduce using rule 48 (num_val -> DOUBLE_LIT .)
    MODULO          reduce using rule 48 (num_val -> DOUBLE_LIT .)
    ADD             reduce using rule 48 (num_val -> DOUBLE_LIT .)
    BETWEEN         reduce using rule 48 (num_val -> DOUBLE_LIT .)
    NOT             reduce using rule 48 (num_val -> DOUBLE_LIT .)
    IS              reduce using rule 48 (num_val -> DOUBLE_LIT .)
    GE              reduce using rule 48 (num_val -> DOUBLE_LIT .)
    GT              reduce using rule 48 (num_val -> DOUBLE_LIT .)
    LE              reduce using rule 48 (num_val -> DOUBLE_LIT .)
    LT              reduce using rule 48 (num_val -> DOUBLE_LIT .)
    NE              reduce using rule 48 (num_val -> DOUBLE_LIT .)
    EQUAL           reduce using rule 48 (num_val -> DOUBLE_LIT .)
    EQUAL_NULL      reduce using rule 48 (num_val -> DOUBLE_LIT .)
    CLOSEPAR        reduce using rule 48 (num_val -> DOUBLE_LIT .)
    SEMICOLON       reduce using rule 48 (num_val -> DOUBLE_LIT .)
    AND             reduce using rule 48 (num_val -> DOUBLE_LIT .)


state 35

    (44) num_factor -> num_term .

    SUBTRACT        reduce using rule 44 (num_factor -> num_term .)
    ASTERISK        reduce using rule 44 (num_factor -> num_term .)
    DIVIDE          reduce using rule 44 (num_factor -> num_term .)
    DIVIDE_INT      reduce using rule 44 (num_factor -> num_term .)
    MODULO          reduce using rule 44 (num_factor -> num_term .)
    BETWEEN         reduce using rule 44 (num_factor -> num_term .)
    NOT             reduce using rule 44 (num_factor -> num_term .)
    IS              reduce using rule 44 (num_factor -> num_term .)
    ADD             reduce using rule 44 (num_factor -> num_term .)
    GE              reduce using rule 44 (num_factor -> num_term .)
    GT              reduce using rule 44 (num_factor -> num_term .)
    LE              reduce using rule 44 (num_factor -> num_term .)
    LT              reduce using rule 44 (num_factor -> num_term .)
    NE              reduce using rule 44 (num_factor -> num_term .)
    EQUAL           reduce using rule 44 (num_factor -> num_term .)
    EQUAL_NULL      reduce using rule 44 (num_factor -> num_term .)
    CLOSEPAR        reduce using rule 44 (num_factor -> num_term .)
    SEMICOLON       reduce using rule 44 (num_factor -> num_term .)
    AND             reduce using rule 44 (num_factor -> num_term .)


state 36

    (24) condition -> string_cond .

    SEMICOLON       reduce using rule 24 (condition -> string_cond .)


state 37

    (33) num_cond -> num_exp . comparison_op num_exp
    (34) num_cond -> num_exp . BETWEEN num_exp AND num_exp
    (35) num_cond -> num_exp . NOT NULL
    (36) num_cond -> num_exp . IS NULL
    (37) num_exp -> num_exp . ADD num_factor
    (50) comparison_op -> . GE
    (51) comparison_op -> . GT
    (52) comparison_op -> . LE
    (53) comparison_op -> . LT
    (54) comparison_op -> . NE
    (55) comparison_op -> . EQUAL
    (56) comparison_op -> . EQUAL_NULL

    BETWEEN         shift and go to state 71
    NOT             shift and go to state 72
    IS              shift and go to state 66
    ADD             shift and go to state 69
    GE              shift and go to state 67
    GT              shift and go to state 62
    LE              shift and go to state 70
    LT              shift and go to state 68
    NE              shift and go to state 63
    EQUAL           shift and go to state 65
    EQUAL_NULL      shift and go to state 64

    comparison_op                  shift and go to state 61

state 38

    (30) string_cond -> STRCMP . OPENPAR string_exp COMMA string_exp CLOSEPAR

    OPENPAR         shift and go to state 73


state 39

    (32) string_exp -> COLUMN_NAME .
    (49) num_val -> COLUMN_NAME .

  ! reduce/reduce conflict for NOT resolved using rule 32 (string_exp -> COLUMN_NAME .)
    LIKE            reduce using rule 32 (string_exp -> COLUMN_NAME .)
    NOT             reduce using rule 32 (string_exp -> COLUMN_NAME .)
    SUBTRACT        reduce using rule 49 (num_val -> COLUMN_NAME .)
    ASTERISK        reduce using rule 49 (num_val -> COLUMN_NAME .)
    DIVIDE          reduce using rule 49 (num_val -> COLUMN_NAME .)
    DIVIDE_INT      reduce using rule 49 (num_val -> COLUMN_NAME .)
    MODULO          reduce using rule 49 (num_val -> COLUMN_NAME .)
    BETWEEN         reduce using rule 49 (num_val -> COLUMN_NAME .)
    IS              reduce using rule 49 (num_val -> COLUMN_NAME .)
    ADD             reduce using rule 49 (num_val -> COLUMN_NAME .)
    GE              reduce using rule 49 (num_val -> COLUMN_NAME .)
    GT              reduce using rule 49 (num_val -> COLUMN_NAME .)
    LE              reduce using rule 49 (num_val -> COLUMN_NAME .)
    LT              reduce using rule 49 (num_val -> COLUMN_NAME .)
    NE              reduce using rule 49 (num_val -> COLUMN_NAME .)
    EQUAL           reduce using rule 49 (num_val -> COLUMN_NAME .)
    EQUAL_NULL      reduce using rule 49 (num_val -> COLUMN_NAME .)

  ! NOT             [ reduce using rule 49 (num_val -> COLUMN_NAME .) ]


state 40

    (10) delete_statement -> DELETE FROM TABLE_NAME WHERE condition . SEMICOLON

    SEMICOLON       shift and go to state 74


state 41

    (25) condition -> num_cond .

    SEMICOLON       reduce using rule 25 (condition -> num_cond .)


state 42

    (38) num_exp -> num_factor . SUBTRACT num_exp
    (39) num_exp -> num_factor .
    (40) num_factor -> num_factor . ASTERISK num_term
    (41) num_factor -> num_factor . DIVIDE num_term
    (42) num_factor -> num_factor . DIVIDE_INT num_term
    (43) num_factor -> num_factor . MODULO num_term

    SUBTRACT        shift and go to state 79
    BETWEEN         reduce using rule 39 (num_exp -> num_factor .)
    NOT             reduce using rule 39 (num_exp -> num_factor .)
    IS              reduce using rule 39 (num_exp -> num_factor .)
    ADD             reduce using rule 39 (num_exp -> num_factor .)
    GE              reduce using rule 39 (num_exp -> num_factor .)
    GT              reduce using rule 39 (num_exp -> num_factor .)
    LE              reduce using rule 39 (num_exp -> num_factor .)
    LT              reduce using rule 39 (num_exp -> num_factor .)
    NE              reduce using rule 39 (num_exp -> num_factor .)
    EQUAL           reduce using rule 39 (num_exp -> num_factor .)
    EQUAL_NULL      reduce using rule 39 (num_exp -> num_factor .)
    CLOSEPAR        reduce using rule 39 (num_exp -> num_factor .)
    SEMICOLON       reduce using rule 39 (num_exp -> num_factor .)
    AND             reduce using rule 39 (num_exp -> num_factor .)
    ASTERISK        shift and go to state 77
    DIVIDE          shift and go to state 76
    DIVIDE_INT      shift and go to state 78
    MODULO          shift and go to state 75


state 43

    (47) num_val -> INT_LIT .
